[gd_scene load_steps=6 format=3 uid="uid://be5711tc6amm1"]

[ext_resource type="Script" uid="uid://bhu1j3y8p3rru" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://dve0byr04xi38" path="res://scenes/dress up/dress_up.tscn" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://dr165dhe3gmxq" path="res://scenes/judge/judge.tscn" id="2_jyhfs"]
[ext_resource type="PackedScene" uid="uid://cyn8w6aqxyoes" path="res://scenes/ui/title.tscn" id="2_tbgi4"]
[ext_resource type="PackedScene" uid="uid://dxmw7woky7jeh" path="res://scenes/ui/game_over.tscn" id="3_sugp2"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0wfyh")

[node name="Title" parent="." instance=ExtResource("2_tbgi4")]
scale = Vector2(6, 6)

[node name="Judge" parent="." instance=ExtResource("2_jyhfs")]
scale = Vector2(6, 6)

[node name="DressUp" parent="." instance=ExtResource("1_o5qli")]
scale = Vector2(6, 6)

[node name="GameOver" parent="." instance=ExtResource("3_sugp2")]
scale = Vector2(6, 6)

[connection signal="start" from="Title" to="." method="_on_title_start"]
[connection signal="game_over_judge" from="Judge" to="." method="_on_judge_game_over_judge"]
[connection signal="next_round" from="Judge" to="." method="_on_judge_next_round"]
[connection signal="finish_game" from="DressUp" to="." method="_on_dress_up_finish_game"]
[connection signal="game_over" from="DressUp" to="." method="_on_dress_up_game_over"]
[connection signal="judge_in" from="DressUp" to="." method="_on_dress_up_judge_in"]
[connection signal="retry_sig" from="GameOver" to="." method="start_round"]
